--- a/data/storage_manifest.json
+++ b/data/storage_manifest.json
@@ -1,6 +1,6 @@
 {
   "Foo": {
-    "image_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/printed/Foo.png",
+    "image_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/generated/Foo.png",
     "spec": {
       "title": "Foo",
       "rules": {
@@ -18,7 +18,7 @@
     "back_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/back/blue.png"
   },
   "Bar": {
-    "image_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/printed/Bar.png",
+    "image_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/generated/Bar.png",
     "spec": {
       "title": "Bar",
       "rules": {
@@ -34,5 +34,22 @@
       ]
     },
     "back_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/back/green.png"
+  },
+  "Untimely Death": {
+    "image_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/generated/Untimely Death.png",
+    "spec": {
+      "title": "Untimely Death",
+      "rules": {
+        "text": "Name a character not on the current map. They take 100 damage."
+      },
+      "upgrade": null,
+      "tier": "gold",
+      "flavour": "\"I wish this guy would just die before we even showed up, that'd save us a lot of time\" - General Zardon",
+      "art_path": "res/card/art/illustration/Untimely Death.png",
+      "tags": [
+        "story-changing-golds"
+      ]
+    },
+    "back_url": "https://raw.githubusercontent.com/elliottomlinson/rpcg/master/res/card/back/gold.png"
   }
 }
