--- a/data/storage_manifest.json
+++ b/data/storage_manifest.json
@@ -57,8 +57,8 @@
     "spec": {
       "title": "Field Medicine",
       "rules": {
-        "passive": "Run twice as fast while carrying friendly characters.",
-        "active": "Heal a visible character 15. They can move twice as fast for the remainder of the session."
+        "hand": "Run twice as fast while carrying friendly characters.",
+        "cast": "Heal a visible character 15. They can move twice as fast for the remainder of the session."
       },
       "upgrade": "Renew",
       "tier": "green",
@@ -75,8 +75,8 @@
     "spec": {
       "title": "Rodent Whisperer",
       "rules": {
-        "passive": "You hold influence over members of Order Rodentia.",
-        "active": "Turn into a rodent for as long as you want."
+        "hand": "You hold influence over members of Order Rodentia.",
+        "cast": "Turn into a rodent for as long as you want."
       },
       "upgrade": null,
       "tier": "green",
@@ -93,8 +93,8 @@
     "spec": {
       "title": "Avian Spirit",
       "rules": {
-        "passive": "You can speak to birds.",
-        "active": "Become a small hummingbird for as long as you want."
+        "hand": "You can speak to birds.",
+        "cast": "Become a small hummingbird for as long as you want."
       },
       "upgrade": null,
       "tier": "green",
@@ -111,8 +111,8 @@
     "spec": {
       "title": "Swarm",
       "rules": {
-        "passive": "You are constantly covered in an insect of your choice",
-        "active": "Pick a small animal or insect for your target to be swarmed by."
+        "hand": "You are constantly covered in an insect of your choice",
+        "cast": "Pick a small animal or insect for your target to be swarmed by."
       },
       "upgrade": null,
       "tier": "green",
@@ -129,8 +129,8 @@
     "spec": {
       "title": "Ouphe's Aura",
       "rules": {
-        "passive": "Machines fear you.",
-        "active": "Disable a visible machine until it is repaired."
+        "hand": "Machines fear you.",
+        "cast": "Disable a visible machine until it is repaired."
       },
       "upgrade": null,
       "tier": "green",
@@ -147,8 +147,8 @@
     "spec": {
       "title": "Equestrian",
       "rules": {
-        "passive": "You can tame anything you can ride.",
-        "active": "Summon a trusty steed."
+        "hand": "You can tame anything you can ride.",
+        "cast": "Summon a trusty steed."
       },
       "upgrade": null,
       "tier": "green",
@@ -165,8 +165,8 @@
     "spec": {
       "title": "Bow Hex",
       "rules": {
-        "passive": "Roll an additional d4 when performing a ranged attack.",
-        "active": "Deal 10 damage to a visible target."
+        "hand": "Roll an additional d4 when performing a ranged attack.",
+        "cast": "Deal 10 damage to a visible target."
       },
       "upgrade": null,
       "tier": "green",
@@ -183,8 +183,8 @@
     "spec": {
       "title": "Sword Hex",
       "rules": {
-        "passive": "Roll an additional d6 when you perform a melee attack.",
-        "active": "Deal 10 damage to a visible target."
+        "hand": "Roll an additional d6 when you perform a melee attack.",
+        "cast": "Deal 10 damage to a visible target."
       },
       "upgrade": null,
       "tier": "green",
@@ -201,8 +201,8 @@
     "spec": {
       "title": "Slingshot",
       "rules": {
-        "passive": "Gain advantage when throwing objects.",
-        "active": "Launch a baseball sized rock at a visible target."
+        "hand": "Gain advantage when throwing objects.",
+        "cast": "Launch a baseball sized rock at a visible target."
       },
       "upgrade": null,
       "tier": "blue",
@@ -236,8 +236,8 @@
     "spec": {
       "title": "Paz",
       "rules": {
-        "passive": "Everybody hates you",
-        "active": "Target NPC will love you from now on"
+        "hand": "Everybody hates you",
+        "cast": "Target NPC will love you from now on"
       },
       "upgrade": null,
       "tier": "green",
@@ -254,8 +254,8 @@
     "spec": {
       "title": "Lover Fatale",
       "rules": {
-        "passive": "Attacks against characters who love you deal 25 bonus damage.",
-        "active": "A visible NPC develops feelings for you."
+        "hand": "Attacks against characters who love you deal 25 bonus damage.",
+        "cast": "A visible NPC develops feelings for you."
       },
       "upgrade": null,
       "tier": "green",
@@ -272,8 +272,8 @@
     "spec": {
       "title": "Infamous",
       "rules": {
-        "passive": "Deal 3 bonus damage when attacking characters who know your name.",
-        "active": "Tell a story about yourself. Any number of visible NPCs will believe this story is true."
+        "hand": "Deal 3 bonus damage when attacking characters who know your name.",
+        "cast": "Tell a story about yourself. Any number of visible NPCs will believe this story is true."
       },
       "upgrade": null,
       "tier": "green",
@@ -511,8 +511,8 @@
     "spec": {
       "title": "Polarize",
       "rules": {
-        "passive": "NPCs hate you.",
-        "active": "Target visible NPC will love you from now on."
+        "hand": "NPCs hate you.",
+        "cast": "Target visible NPC will love you from now on."
       },
       "upgrade": null,
       "tier": "green",
@@ -600,8 +600,8 @@
     "spec": {
       "title": "Charge",
       "rules": {
-        "passive": "Gain advantage when running through obstacles.",
-        "active": "Move up to 15 metres in any direction."
+        "hand": "Gain advantage when running through obstacles.",
+        "cast": "Move up to 15 metres in any direction."
       },
       "upgrade": "Teleport",
       "tier": "green",
@@ -754,8 +754,8 @@
     "spec": {
       "title": "Talk it Out",
       "rules": {
-        "passive": "Whenever you make an attack, you can choose whether or not it will deal damage.",
-        "active": "A visible character is forced to stop what they're doing and discuss their feelings with you."
+        "hand": "Whenever you make an attack, you can choose whether or not it will deal damage.",
+        "cast": "A visible character is forced to stop what they're doing and discuss their feelings with you."
       },
       "upgrade": "Timeout",
       "tier": "green",
@@ -823,8 +823,8 @@
     "spec": {
       "title": "Shadow Strike",
       "rules": {
-        "passive": "Deal double damage while out of combat.",
-        "active": "Disappear for as long as you remain perfectly still."
+        "hand": "Deal double damage while out of combat.",
+        "cast": "Disappear for as long as you remain perfectly still."
       },
       "upgrade": null,
       "tier": "green",
@@ -841,8 +841,8 @@
     "spec": {
       "title": "Survival Instincts",
       "rules": {
-        "passive": "Triple advantage on all d20 rolls when below 5 health.",
-        "active": "Summon one of the following items: a knife, 5 feet of rope, a match, or a bottle of water."
+        "hand": "Triple advantage on all d20 rolls when below 5 health.",
+        "cast": "Summon one of the following items: a knife, 5 feet of rope, a match, or a bottle of water."
       },
       "upgrade": null,
       "tier": "green",
@@ -1917,8 +1917,8 @@
     "spec": {
       "title": "Throw",
       "rules": {
-        "passive": "Advantage when catching.",
-        "active": "Throw an object accurately at a target up to 12 metres away."
+        "hand": "Advantage when catching.",
+        "cast": "Throw an object accurately at a target up to 12 metres away."
       },
       "upgrade": "Pitch",
       "tier": "green",
@@ -1935,8 +1935,8 @@
     "spec": {
       "title": "Pitch",
       "rules": {
-        "passive": "Advantage when catching.",
-        "active": "Throw an object accurately as far as you want."
+        "hand": "Advantage when catching.",
+        "cast": "Throw an object accurately as far as you want."
       },
       "upgrade": "Launch",
       "tier": "red",
@@ -2327,8 +2327,8 @@
     "spec": {
       "title": "Renew",
       "rules": {
-        "passive": "You are 3 feet taller.",
-        "active": "Restore a visible character to maximum health. Their maximum health permanently increases by 10 and they grow 3 feet taller."
+        "hand": "You are 3 feet taller.",
+        "cast": "Restore a visible character to maximum health. Their maximum health permanently increases by 10 and they grow 3 feet taller."
       },
       "upgrade": "Reincarnate",
       "tier": "red",
@@ -2345,8 +2345,8 @@
     "spec": {
       "title": "Reincarnate",
       "rules": {
-        "passive": "The dead fear you.",
-        "active": "Revive a dead character."
+        "hand": "The dead fear you.",
+        "cast": "Revive a dead character."
       },
       "upgrade": null,
       "tier": "gold",
@@ -2380,8 +2380,8 @@
     "spec": {
       "title": "Reflect",
       "rules": {
-        "passive": "Thrown objects bounce off of you with equal force.",
-        "active": "The next amount of damage dealt to you is also dealt to your attacker."
+        "hand": "Thrown objects bounce off of you with equal force.",
+        "cast": "The next amount of damage dealt to you is also dealt to your attacker."
       },
       "upgrade": "Deflect",
       "tier": "green",
@@ -2517,8 +2517,8 @@
     "spec": {
       "title": "Gale",
       "rules": {
-        "passive": "Whenever you throw a character in the air, you can also throw them 8 metres in any direction",
-        "active": "Throw any number of characters in a 3 metre radius into the air."
+        "hand": "Whenever you throw a character in the air, you can also throw them 8 metres in any direction",
+        "cast": "Throw any number of characters in a 3 metre radius into the air."
       },
       "upgrade": "Wind Storm",
       "tier": "green",
