--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,55 @@ jobs:
           write-mode: overwrite
           contents: |
             ${{steps.csv-table-output.outputs.markdown-table}}
-            
+
+      - name: add grey emoji
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "grey,"
+          replace: "⚫ grey,"
+          include: "catalogue.md"
+          regex: false
+
+      - name: add blue emoji
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "blue,"
+          replace: "🔵 blue,"
+          include: "catalogue.md"
+          regex: false
+
+      - name: add green emoji
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "green,"
+          replace: "🟢 green,"
+          include: "catalogue.md"
+          regex: false
+
+      - name: add red emoji
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "red,"
+          replace: "🔴 red,"
+          include: "catalogue.md"
+          regex: false
+
+      - name: add gold emoji
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "gold,"
+          replace: "🟡 gold,"
+          include: "catalogue.md"
+          regex: false
+
+      - name: add rainbow emoji
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "rainbow,"
+          replace: "🌈 rainbow,"
+          include: "catalogue.md"
+          regex: false
+
       - name: commit and push
         uses: Andro999b/push@v1.3
         with:
@@ -38,3 +86,5 @@ jobs:
           branch: master
           force: true
           message: 'updated by github actions'
+
+          
